feat: Vercel deployment prep - env-based API URL and CORS origins